--- a/title/title.tex
+++ b/title/title.tex
@@ -2,11 +2,11 @@
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
 
-%----------------------------------------------------------------------------------------
+%---------------------------------------------------------------
 %	LOGO SECTION
-%----------------------------------------------------------------------------------------
+%---------------------------------------------------------------
 \center
-\includegraphics[width=8cm]{title/logo.png}\\[1cm]
+\includegraphics[width=8cm]{title/logo.png}\\[2cm]
  
 %----------------------------------------------------------------------------------------
 
@@ -33,24 +33,18 @@
 
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
-\emph{Author:}\\
+\emph{Autor:}\\
 \@author % Your name
 \end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
-Prof. Lily Smith \\[1.2em] % Supervisor's Name
-\emph{Second Marker:} \\
-Dr. Adam Smith % second marker's name
+\emph{Professor:} \\
+Prof. xis ypson zes \\[1.2em] % Supervisor's Name
 \end{flushright}
-\end{minipage}\\[2cm]
+\end{minipage}\\[10cm]
 \makeatother
-
-% If you don't want a supervisor, uncomment the two lines below and remove the section above
-%\Large \emph{Author:}\\
-%John \textsc{Smith}\\[3cm] % Your name
 
 %----------------------------------------------------------------------------------------
 %	DATE SECTION
