--- a/main.tex
+++ b/main.tex
@@ -1,38 +1,27 @@
 \documentclass[a4paper, twoside]{report}
 
-%% Language and font encodings
+%% Linguagem dp documento
 \usepackage[portuguese]{babel}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-%% Sets page size and margins
+%% Configuração da página, espaçamento
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
-%% Useful packages
+%% packages
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
-\title{Project Title}
+\title{nome do projeto}
 \author{Pedro V. da Fonseca}
-
 
 \begin{document}
 \input{title/title.tex}
 
-\begin{abstract}
-Your abstract goes here
-\end{abstract}
-
-\renewcommand{\abstractname}{Acknowledgements}
-\begin{abstract}
-Thanks mum!
-\end{abstract}
-
 \tableofcontents
-\listoffigures
-\listoftables
+
 
 %\input{introduction/introduction.tex}
 %\input{background/background.tex}
