--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper, twoside]{report}
 
-%% Linguagem dp documento
+%% Linguagem do documento
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -22,13 +22,7 @@
 
 \tableofcontents
 
-
-%\input{introduction/introduction.tex}
-%\input{background/background.tex}
-%\input{project/project.tex}
-%\input{evaluation/evaluation.tex}
-%\input{conclusion/conclusion.tex}
-%\input{appendix/appendix.tex}
+\input{introducao/introducao.tex}
 
 \bibliographystyle{alpha}
 \bibliography{bibs/sample}
