--- a/introducao/introducao.tex
+++ b/introducao/introducao.tex
@@ -3,3 +3,5 @@ Ai sim cara \cite{greenwade93}
 \section{Objetivos}
 \section{Desafio}
 \section{Contribuições}
+
+\textbf{Olá amigos} Isso é apenas um teste de referências \cite{Rynne2008LinearAnalysis}
