--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 
 \input{introducao/introducao.tex}
 
-\bibliographystyle{alpha}
-\bibliography{bibs/sample}
+\bibliographystyle{ieeetr}
+\bibliography{bibliografia/referencias}
 
 \end{document}
